spacing fix

--- a/src/stylesheets/pages/about-me.scss
+++ b/src/stylesheets/pages/about-me.scss
@@ -169,7 +169,7 @@
   position: relative;
 
   @media (max-width: $breakpoint-sm) {
-    width: 75%;
+    width: 65%;
     padding-right: 0;
   }
 
